--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,15 +1,17 @@
-<html>
-<head>
-  <meta charset=UTF-8>
+<!DOCTYPE html>
+<html lang="pl">
+  <head>
+    <meta charset=UTF-8>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-</head>
-<body>
-<div class="jumbotron text-center" style="margin-bottom:0">
+    <title>Logowanie</title>
+  </head>
+  <body>
+  <div class="jumbotron text-center" style="margin-bottom:0">
 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="481.045px" height="129.055px" viewBox="0 0 481.045 129.055" enable-background="new 0 0 481.045 129.055"
 	 xml:space="preserve">
@@ -91,34 +93,20 @@
 </g>
 </svg>
 </div>
- 
+
 <div class="container">
- <div class="form-group">
-<form action="addZlecenie" name="Dodaj Zlecenie">
-<p>Podaj date Wysylki:</p><p align="left"><input type="date" id="start" name="dataWysylki"></p>
-<!-- <p>Podaj id Zlecenia:</p><p align="left"> <input type="text" name="id"></p> -->
-<p>Podaj id Wykrojnika:</p><p align="left"> <input type="text" name="idWykrojnika"></p>
-<p>Podaj Szerokosc Materialu:</p><p align="left"><input type="text" name="szerokoscSurowca"></p><br>
-<p>Podaj Priorytet 1-10:</p><p align="left"> <input type="text" name="priorytet"></p><br>
-<p>Podaj Ilosc Etykiet:</p><p align="left"> <input type="text" name="iloscEtykiet"></p><br>
-<p>Podaj gilze:</p><p align="left"> <input type="text" name="gilza"></p><br>
-<p>Podaj numer Etykiety:</p><p align="left"> <input type="text" name="numerEtykiety"></p><br>
-<p>Podaj nazwe Etykiety:</p><p align="left"> <input type="text" name="nazwaEtykiety"></p><br>
-<p>Podaj nazwe Klienta:</p><p align="left"> <input type="text" name="nazwaKlienta"></p><br>
-<p>Podaj numer Maszyny:</p><p align="left"> <input type="text" name="maszyna"></p><br>
-<p>Podaj rodzaj Surowca:</p><p align="left"> <input type="text" name="rodzajSurowca"></p><br>
-<p>Wystawil:</p><p align="left"> <input type="text" name="wystawil"></p><br>
-<p>Podaj kolory:</p><p align="left"><input type="text" name="kolory"></p><br>
-<input type="submit" value="Dodaj do bazy">
-</form>
+  <h2><p align="center"> Moduł Logowania</p></h2>
+  <form action="/login" method="post">
+    <div class="form-group">
+      <label for="username">Nazwa Użytkownika:</label>
+      <input type="text" class="form-control" id="username" placeholder="Wprowadź Nazwę Użytkownika" required autofocus name="username">
+    </div>
+    <div class="form-group">
+      <label for="pwd">Hasło:</label>
+      <input type="password" class="form-control" id="password" placeholder="Wprowadź Hasło" required name="password">
+    </div>
+    <input name="_csrf" type="hidden" value="5aba6c25-e377-46b8-b4a9-d2a2d136deaa" />
+        <button type="submit" class="btn btn-primary">Zaloguj</button>
+  </form>
 </div>
-<br>
-<br>
- <div class="form-group">
-<form action="getZlecenia">
-<input type="submit" value="Pokaz zlecenia">
-</form>
-</div>
-</div>
-</body>
-</html>		
+</body></html>
